...

  Created by Spiros Gerokostas on 20/04/2019.
  Copyright © 2019 Spiros Gerokostas. All rights reserved.
*/

// ListsViewController
"My_lists" = "My Lists";
"Update_lists" = "Last Updated %@";
"Empty_lists" = "Tap + icon to create a new list.";

// TasksViewController
"Create_task" = "Tap text field to create a new task.";
"No_list_selected" = "No list selected";
...

"Add_new_task" = "Add new task";
"No_results" = "No Results";

"My_archives" = "My Archives";

"Done" = "Done";
"Edit" = "Edit";
"Archive" = "Archive";


