...
    override func viewDidLoad() {
        super.viewDidLoad()
        self.view.backgroundColor = UIColor.tinylogLightGray
        self.tableView.separatorColor = UIColor.tinylogTableViewLineColor

        self.navigationItem.leftBarButtonItem = UIBarButtonItem(
            title: "Cancel",
            style: UIBarButtonItem.Style.plain,
            target: self,
            action: #selector(TLIAddListViewController.cancel(_:)))
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Save",
            style: UIBarButtonItem.Style.plain,
...

        menuColorsView = TLIMenuColorsView(
            frame: CGRect(x: 12.0, y: 200.0, width: self.view.frame.width, height: 51.0))
        self.tableView.tableFooterView = menuColorsView

        if mode == .create {
            self.title = "Add List"
        } else if mode == .edit {
            self.title = "Edit List"
            if let list = list {
                // swiftlint:disable force_unwrapping
                self.menuColorsView!.currentColor = list.color
                let index: Int = self.menuColorsView!.findIndexByColor(list.color!)
...
