...
    private var borderLineView: UIView = {
        let borderLineView = UIView()
        borderLineView.backgroundColor = UIColor(named: "tableViewSeparator")
        return borderLineView
    }()

    private var addListButton: AddListButton = {
        let addListButton = AddListButton()
        addListButton.accessibilityIdentifier = "addListButton"
        return addListButton
    }()

    private var archiveButton: ArchiveButton = {
...
