...
            self,
            action: #selector(SetupViewController.disableiCloudAndDismiss(_:)),
            for: UIControl.Event.touchDown)
        return notNowButton
    }()

    private lazy var useiCloudButton: RoundedButton = {
        let useiCloudButton = RoundedButton()
        useiCloudButton.accessibilityIdentifier = "useiCloudButton"
        useiCloudButton.setTitle(localizedString(key: "Use_iCloud"), for: .normal)
        useiCloudButton.addTarget(
            self,
            action: #selector(SetupViewController.enableiCloudAndDismiss(_:)),
...
